# pyyield

./: .clang-format  README.md  pyproject.toml
.github/workflows/: prepare-release.yml  python-build.yml
src/: pyyieldModule.cpp
tests/: test_pyyield.py
